--- a/addons/website/i18n/website.pot
+++ b/addons/website/i18n/website.pot
@@ -1,10 +1,10 @@
-# Translation of Odoo Server.
+# Translation of Server.
 # This file contains the translation of the following modules:
 #	* website
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Eagle Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-11-14 15:53+0000\n"
 "PO-Revision-Date: 2016-11-14 15:53+0000\n"
@@ -63,7 +63,7 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.website_planner
-msgid "- The Odoo Team"
+msgid "- The Eagle ERP Team"
 msgstr ""
 
 #. module: website
@@ -494,7 +494,7 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_button
-msgid "<strong>50,000+ companies run Odoo to grow their businesses.</strong>"
+msgid "<strong>50,000+ companies run e to grow their businesses.</strong>"
 msgstr ""
 
 #. module: website
@@ -514,8 +514,8 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.website_planner
-msgid "<strong>Be announced on the Odoo Twitter account</strong><br/>\n"
-"                                We like to hear from people using Odoo to build their website. Tweet us"
+msgid "<strong>Be announced on the Eagle Twitter account</strong><br/>\n"
+"                                We like to hear from people using Eagle to build their website. Tweet us"
 msgstr ""
 
 #. module: website
@@ -931,7 +931,7 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_banner
-msgid "Banner Odoo Image"
+msgid "Banner Eagle Image"
 msgstr ""
 
 #. module: website
@@ -1648,8 +1648,8 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.website_planner
-msgid "For the Odoo Team,<br/>\n"
-"                            Fabien Pinckaers, Founder"
+msgid "For the Eagle Team,<br/>\n"
+"                            Md. Shaheen Hossain, Founder"
 msgstr ""
 
 #. module: website
@@ -2248,22 +2248,22 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.layout_footer_copyright
-msgid "Odoo"
+msgid "Eagle ERP"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_three_columns
-msgid "Odoo - Sample 1 for three columns"
+msgid "Eagle ERP - Sample 1 for three columns"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_three_columns
-msgid "Odoo - Sample 2 for three columns"
+msgid "Eagle ERP - Sample 2 for three columns"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_three_columns
-msgid "Odoo - Sample 3 for three columns"
+msgid "Eagle ERP - Sample 3 for three columns"
 msgstr ""
 
 #. module: website
@@ -2273,33 +2273,33 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_image_floating
-msgid "Odoo CMS- Sample image floating"
+msgid "Eagle ERP CMS- Sample image floating"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.show_website_info
-msgid "Odoo Version"
+msgid "Eagle ERP Version"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_image_text
-msgid "Odoo image and text block"
+msgid "Eagle ERP image and text block"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_parallax_slider
-msgid "Odoo provides essential platform for our project management.\n"
+msgid "Eagle ERP provides essential platform for our project management.\n"
 "                                                Things are better organized and more visible with it."
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_text_image
-msgid "Odoo text and image block"
+msgid "Eagle ERP text and image block"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_faq_collapse
-msgid "Odoo's POS is a web application that can run on any device that\n"
+msgid "Eagle ERP's POS is a web application that can run on any device that\n"
 "                                can display websites with little to no setup required."
 msgstr ""
 
@@ -3287,7 +3287,7 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.website_planner
-msgid "View our Odoo Online themes (free!)"
+msgid "View our Eagle ERP Online themes ()"
 msgstr ""
 
 #. module: website
@@ -3573,7 +3573,7 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.s_faq_collapse
-msgid "Which hardware does Odoo POS support?"
+msgid "Which hardware does Eagle ERP POS support?"
 msgstr ""
 
 #. module: website
@@ -3851,29 +3851,29 @@ msgstr ""
 #. module: website
 #: model:ir.ui.view,arch_db:website.view_website_config_settings
 #: model:ir.ui.view,arch_db:website.view_website_form
-msgid "https://plus.google.com/+Odooapps"
+msgid "https://plus.google.com/"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.view_website_config_settings
 #: model:ir.ui.view,arch_db:website.view_website_form
-msgid "https://twitter.com/Odoo"
+msgid "https://twitter.com/"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.view_website_config_settings
-msgid "https://www.facebook.com/Odoo"
+msgid "https://www.facebook.com/"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.view_website_form
-msgid "https://www.facebook.com/odoo"
+msgid "https://www.facebook.com/"
 msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.view_website_config_settings
 #: model:ir.ui.view,arch_db:website.view_website_form
-msgid "https://www.linkedin.com/company/odoo"
+msgid "https://www.linkedin.com/company/"
 msgstr ""
 
 #. module: website
@@ -3895,7 +3895,7 @@ msgstr ""
 
 #. module: website
 #: model:ir.ui.view,arch_db:website.show_website_info
-msgid "instance of Odoo, the"
+msgid "instance of Eagle ERP, the"
 msgstr ""
 
 #. module: website
